Fix more dark mode roll template styles

--- a/Palladium Rifts by Grinning Gecko/src/scss/rifts.scss
+++ b/Palladium Rifts by Grinning Gecko/src/scss/rifts.scss
@@ -1092,13 +1092,14 @@ img.logo {
       background-color: var(--dark-primary);
       border-color: var(--dark-primary);
       color: var(--dark-primarytext);
+
+      &.fullcrit {
+        border: 2px solid #3fb315;
+      }
+      &.fullfail {
+        border: 2px solid #b31515;
+      }
     }
-  }
-  .inlinerollresult,
-  .sheet-spent {
-    background-color: var(--dark-primary);
-    border-color: var(--dark-primary);
-    color: var(--dark-primarytext);
   }
 }
 
